<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.bedoya.esau.figuras.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccion"
            android:textAlignment="center"
            android:layout_gravity="bottom"
            android:textSize="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circulo"
                    android:textSize="16dp"
                    android:id="@+id/rCirculo"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cuadro"
                    android:textSize="16dp"
                    android:id="@+id/rCuadro"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rectangulo"
                    android:textSize="16dp"
                    android:id="@+id/rRectangulo"
                    android:onClick="onRadioButtonClicked"/>
                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/triangulo"
                    android:textSize="16dp"
                    android:id="@+id/rTriangulo"
                    android:onClick="onRadioButtonClicked"/>

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Radio"
                    android:inputType="numberDecimal"
                    android:id="@+id/eCirculo"
                    android:textSize="16dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="Lado"
                    android:id="@+id/eCuadro"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                   />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="Ancho"
                    android:id="@+id/eRecAncho"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                    />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="Alto"
                    android:id="@+id/eRecAlto"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="Base"
                    android:id="@+id/eTriaBase"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                   />

                <EditText
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    android:hint="Altura"
                    android:id="@+id/eTriaAlto"
                    android:inputType="numberDecimal"
                    android:textSize="16dp"
                    />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/calcular"
                    android:textSize="16dp"
                    android:id="@+id/bCalcular"
                    android:visibility="gone"/>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:text="@string/resultado"
                    android:visibility="gone"
                    android:id="@+id/tEtiRes"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textSize="16dp"
                    android:visibility="gone"
                    android:id="@+id/tResultado"/>

            </LinearLayout>

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
